--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron/fuses": "^1.8.0",
-    "electron": "^30.0.8",
-    "electron-squirrel-startup": "^1.0.1"
+    "electron": "^30.0.8"
   },
   "scripts": {
     "start": "electron-forge start",
@@ -23,6 +22,7 @@
     "make": "electron-forge make"
   },
   "dependencies": {
-    "koffi": "^2.8.9"
+    "koffi": "^2.8.9",
+    "electron-squirrel-startup": "^1.0.1"
   }
 }
